<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#85F0E6"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:text="@string/mandal_registration_form"
                        android:textSize="23sp"
                        android:textColor="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="2dp"
                    android:layout_margin="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="@string/state"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                    <EditText
                        android:id="@+id/mstate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:enabled="true"
                        android:layout_weight="1"
                        android:hint="@string/enter_state_name"
                        android:inputType="text"
                        />

                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="2dp"
                android:layout_margin="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/state_code"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/mstatecode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:enabled="true"
                    android:layout_weight="1"
                    android:hint="@string/enter_state_name"
                    android:inputType="text"
                    />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="2dp"
                    android:layout_margin="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="District:"
                        android:layout_margin="10dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/black"
                        />
                    <EditText
                        android:id="@+id/mdistrictname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:enabled="true"
                        android:layout_weight="1"
                        android:hint="enter district name"
                        android:inputType="text"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="2dp"
                    android:layout_margin="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="@string/district_code1"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        />
                    <EditText
                        android:id="@+id/mdistrictcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:enabled="true"
                        android:layout_weight="1"
                        android:hint="@string/enter_district_code1"
                        android:inputType="text"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:layout_margin="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="@string/mandal"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        />
                    <EditText
                        android:id="@+id/mandalname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:enabled="true"
                        android:layout_weight="1"
                        android:hint="@string/enter_mandal_name"
                        android:inputType="text"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:layout_margin="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="@string/mandal_code"
                        android:layout_margin="10dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        />
                    <EditText
                        android:id="@+id/mandalcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:enabled="true"
                        android:layout_weight="1"
                        android:hint="@string/enter_mandal_code"
                        android:inputType="text"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/mregister"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/register"
                    android:textColor="@android:color/black">
                </Button>
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>
